BestFirstSearch + no need for colors on state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(EX4)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(EX4 main.cpp MyTestClientHandler.h MyTestClientHandler.cpp SerialServer.h SerialServer.cpp Server.h Solver.h StringReverser.h StringReverser.cpp Node.cpp Node.h MyClientHandler.h MyClientHandler.cpp Matrix.h MatrixSolver.cpp MatrixSolver.h BFS.cpp BFS.h ClientHandler.h Searchable.h Searchable.cpp Searcher.h Searcher.cpp State.cpp State.h)
+add_executable(EX4 main.cpp MyTestClientHandler.h MyTestClientHandler.cpp SerialServer.h SerialServer.cpp Server.h Solver.h StringReverser.h StringReverser.cpp Node.cpp Node.h MyClientHandler.h MyClientHandler.cpp Matrix.h MatrixSolver.cpp MatrixSolver.h BFS.cpp BFS.h ClientHandler.h Searchable.h Searchable.cpp Searcher.h Searcher.cpp State.cpp State.h BestFirstSearch.cpp BestFirstSearch.h)
